# drivestudio-1

./: AGENTS.md  CODEX.md  main.py  mcp-test.txt  pyproject.toml
docs/: nuscenes_datareport.md
spec/: agents.md  architecture.md  data-structure.md  directory-structure.md  implementation-tasks.md  index.md  requirements.md
spec/overview/: architecture.md  data-structure.md  directory-structure.md  requirements.md
spec/roles/: agent-coder.md  agent-judge.md  agent-planner.md  agent-researcher.md
spec/tasks/: implementation-tasks.md
spec/workflow/: branching-strategy.md  state-formats.md
state/: state.json
state/reports/: T-FR-ARCH-001.md  T-FR-ARCH-003.md  T-FR-MESH-002.md
state/tickets/T-FR-ARCH-001/: C2-sugar-losses.md  C3-stage-schedule.md  C5-test-harness.md  index.md
