[project]
name = "drivestudio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chumpy>=0.70",
    "gdown>=5.2.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "kornia==0.7.2",
    "lpips==0.1.4",
    "nerfview==0.0.3",
    "omegaconf==2.3.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pypdf2>=3.0.1",
    "pytorch-msssim==1.0.0",
    "scikit-image==0.20.0",
    "tensorboard==2.11.0",
    "timm==0.9.5",
    "torchmetrics==0.10.3",
    "viser==0.2.1",
    "wandb==0.15.8",
]
